fix: add metadata handling and database update for artifact ingestion process

--- a/ecs-worker/Dockerfile
+++ b/ecs-worker/Dockerfile
@@ -5,5 +5,9 @@ WORKDIR /app
 RUN pip install boto3
 
 COPY worker.py .
+COPY requirements.txt .
+
+# Install Python deps
+RUN pip install --no-cache-dir -r requirements.txt
 
 CMD ["python", "worker.py"]
