--- a/template.yaml
+++ b/template.yaml
@@ -1490,6 +1490,10 @@ Resources:
             RestApiId: !Ref ece461Ph2Api
       Policies:
         - AWSLambdaBasicExecutionRole
+        - Statement:
+            - Effect: Allow
+              Action: secretsmanager:GetSecretValue
+              Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:DB_CREDS-*
   
   
   #########################################################
