--- a/template.yaml
+++ b/template.yaml
@@ -1116,6 +1116,46 @@ Resources:
                 httpMethod: POST
                 type: aws_proxy
 
+          /artifact/model/{id}/lineage:
+            get:
+              parameters:
+                - name: id
+                  description: artifact id
+                  schema:
+                    type: string
+                  in: path
+                  required: true
+                - name: X-Authorization
+                  in: header
+                  required: false
+                  schema:
+                    type: string
+              responses:
+                "200":
+                  content:
+                    application/json:
+                      schema:
+                        type: object
+                        properties:
+                          nodes:
+                            type: array
+                          edges:
+                            type: array
+                  description: Lineage graph extracted from structured metadata (BASELINE)
+                "400":
+                  description: The lineage graph cannot be computed
+                "403":
+                  description: Authentication failed
+                "404":
+                  description: Artifact does not exist
+              operationId: ArtifactLineageGet
+              summary: Retrieve the lineage graph for this artifact (BASELINE)
+              x-amazon-apigateway-integration:
+                uri:
+                  Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetLineageLambda.Arn}/invocations
+                httpMethod: POST
+                type: aws_proxy
+
           /artifact/model/{id}/rate:
             get:
               parameters:
@@ -1453,6 +1493,27 @@ Resources:
               Action: secretsmanager:GetSecretValue
               Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:DB_CREDS-*
 
+  GetLineageLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: get_lineage_lambda
+      Handler: handlers/get_lineage_lambda.lambda_handler
+      CodeUri: ./backend/app
+      Description: Lambda for getting artifact lineage graph
+      Events:
+        ApiEvent:
+          Type: Api
+          Properties:
+            Path: /artifact/model/{id}/lineage
+            Method: get
+            RestApiId: !Ref ece461Ph2Api
+      Policies:
+        - AWSLambdaBasicExecutionRole
+        - Statement:
+            - Effect: Allow
+              Action: secretsmanager:GetSecretValue
+              Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:DB_CREDS-*
+
   RateArtifactLambda:
     Type: AWS::Serverless::Function
     Properties:
@@ -1577,6 +1638,14 @@ Resources:
     Properties:
       Action: lambda:InvokeFunction
       FunctionName: !GetAtt GetArtifactByRegexLambda.Arn
+      Principal: apigateway.amazonaws.com
+      SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ece461Ph2Api}/*/*/*
+
+  GetLineagePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !GetAtt GetLineageLambda.Arn
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${ece461Ph2Api}/*/*/*
 
