--- a/template.yaml
+++ b/template.yaml
@@ -1400,6 +1400,10 @@ Resources:
               Action:
                 - sqs:SendMessage
               Resource: arn:aws:sqs:us-east-1:422216016693:model-ingestion-queue
+            - Effect: Allow
+              Action:
+                - bedrock:InvokeModel
+              Resource: arn:aws:bedrock:us-east-1::foundation-model/anthropic.claude-3-haiku-20240307-v1:0
   ListArtifactsLambda:
     Type: AWS::Serverless::Function
     Properties:
