--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,7 +31,7 @@ jobs:
       
     - name: Run tests
       run: |
-        python -m pytest --cov=app --cov-report=term-missing backend/tests/
+        cd backend && python -m pytest tests/ --cov=app --cov-report=term-missing --cov-report=html
 
 ## CD
     - name: Install AWS SAM CLI
